# rcx-pi-core

./: .gitignore  CHANGELOG.md  CI_POLICY.md  CLAUDE.md  CLAUDE_ALWAYS_READ_FIRST.md  EntropyBudget.md  Makefile  NEXT_STEPS.md  RCX_PI_KERNEL.md  README.md  README_BOOTSTRAP.MD  STATUS.md  TASKS.md  Why_RCX_PI_VM_EXISTS.md  __init__.py  bench_rcx.py  demo_rcx_pi.py  example_higher.py  example_numbers.py  example_rcx.py  pyproject.toml  rcx_runtime.py  rcx_start.py  repl_rcx.py  run_all.py  test_api_named_programs.py  test_bytecode_core.py  test_combinators.py  test_docs_examples.py  test_lists.py  test_meta.py  test_numbers.py  test_numbers_core.py  test_program_registry.py  test_programs.py  test_programs_core.py  test_programs_map.py  test_programs_seq.py  test_projection.py  test_rcx_programs.py
.githooks/: pre-commit
.github/: CODEOWNERS  pull_request_template.md
.rcx_library/: README.md
docs/: 00-overview.tex  02-core-structures.tex  07-higher-operations.tex  AgentRig.v0.md  BytecodeExecution.v1c.md  BytecodeMapping.v0.md  BytecodeMapping.v1.md  BytecodeOverview.md  ClosureEvidence.v0.md  DeepStep.v0.md  DeepStep_HandTrace.md  EVAL_SEED.v0.md  EnginenewsSpecMapping.v0.md  Flags.md  GuardrailsAudit.v0.md  IndependentEncounter.v0.md  MetaCircularReadiness.v1.md  MinimalNativeExecutionPrimitive.v0.md  RCX_Core_Spec_v1.txt  RCX_OMEGA_CONTRACTS.md  RCX_REWRITE_TERMINATION_CONTRACTS.md  RCX_pi_worlds_1over0_and_cycles.txt.txt  RCXparadoxworldsv1.txt  README.md  RuleAsMotif.v0.md  SNAPSHOT_STATUS.md  SNAPSHOT_V1.md  StallFixExecution.v0.md  StallFixObservability.v0.md  StructuralPurity.v0.md  TESTING_PERFORMANCE_ISSUE.md  TraceEventTypes.v1.md  TraceReadingPrimer.v0.md  cli_quickstart.md  cli_schema.md  orbit_viz_svg.md  program_descriptor_schema.json  program_descriptor_schema.md  self_hosting_milestones.md  self_hosting_readiness_gates.md  (+2 more)
prototypes/: linked_list_append.json  test_deep_eval_v0.py  test_linked_list_append.py
rcx_omega/: README.md  __init__.py  analyze.py  json_versioning.py  lens.py  omega_kernel.py  test_analyze.py  test_omega_scaffold.py  test_trace.py  test_trace_cli_smoke.py  trace.py  trace_cli.py
rcx_pi/: README.md  __init__.py  api.py  bench.py  bytecode_vm.py  cli_schema.py  cli_schema_run.py  deep_eval.py  eval_seed.py  higher.py  kernel.py  listutils.py  match_mu.py  meta.py  mu_type.py  pretty.py  program_descriptor.py  program_descriptor_cli.py  program_descriptor_lib.py  program_registry.py  program_run.py  program_run_cli.py  programs.py  projection.py  projection_coverage.py  rcx_cli.py  replay_cli.py  rule_motifs_v0.py  self_host.py  step_mu.py  subst_mu.py  test_worlds_probe.py  trace_canon.py  worlds_bridge.py  worlds_json.py  worlds_probe.py
rcx_pi_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
rcx_pi_rust/: Cargo.toml  README.md  bootstrap_for_ai.md  test_w.mu
scripts/: __init__.py  (+46 more)
(+421 files in other folders)
