[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rcx-pi-core"
version = "0.0.0"
description = "RCX-π core (Python utilities + CLIs)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
rcx-cli = "rcx_pi.rcx_cli:main"

rcx = "rcx_pi.rcx_cli:main"
rcx-program-descriptor = "rcx_pi.program_descriptor_cli:main"
rcx-program-run = "rcx_pi.program_run_cli:main"
rcx-world-trace = "rcx_pi.worlds.world_trace_cli:main"

[tool.setuptools]
packages = ["rcx_pi", "rcx_pi.core", "rcx_pi.engine", "rcx_pi.reduction", "rcx_pi.utils", "rcx_pi.worlds"]

[project.optional-dependencies]
test = ["pytest", "jsonschema"]