[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rcx-pi-core"
version = "0.0.0"
description = "RCX-π core (Python utilities + CLIs)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
rcx-cli = "rcx_pi.rcx_cli:main"

rcx = "rcx_pi.rcx_cli:main"
rcx-program-descriptor = "rcx_pi.program_descriptor_cli:main"
rcx-program-run = "rcx_pi.program_run_cli:main"
rcx-world-trace = "rcx_pi.worlds.world_trace_cli:main"

[tool.setuptools]
packages = ["rcx_pi", "rcx_pi.core", "rcx_pi.engine", "rcx_pi.reduction", "rcx_pi.specs", "rcx_pi.utils", "rcx_pi.worlds"]

[project.optional-dependencies]
test = ["pytest", "pytest-xdist", "jsonschema", "hypothesis"]

[tool.pytest.ini_options]
testpaths = ["tests", "rcx_pi"]
# NOTE: Parallel execution (-n auto) is NOT enabled by default because:
# - Single-file runs have 3s worker spawn overhead that makes them slower
# - Full suite runs use audit scripts which add -n auto explicitly
# To run full suite with parallel: pytest -n auto --dist worksteal
# Or use: ./tools/audit_fast.sh or ./tools/audit_all.sh

[tool.setuptools.package-data]
"*" = ["*.json", "*.md"]

[tool.setuptools.exclude-package-data]
"*" = ["test_*.py", "**/tests/**"]